--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	-->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/styles.min.css">
+	<link rel="stylesheet" href="css/styles.min.css?v1">
 	<link rel="stylesheet" href="css/template-colors/green.css">
 	<link rel="stylesheet" href="https://unpkg.com/botui/build/botui.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/botui/build/botui-theme-default.css">
