--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<title>Ashish Kanwar | Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="description" content="vCard & Resume Template">
-	<meta name="keywords" content="vcard, resposnive, resume, personal, card, cv, cards, portfolio">
+	<meta name="description" content="Hello! I’m Ashish.">
+	<meta name="keywords" content="Ashish Kanwar, Portfolio, Ex-Zomato, Art of Where">
 	<meta name="author" content="beshleyua">
 	
 	<!--
