--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 													<div class="blog-detail">App</div>
 													<div class="blog-content">
 														<blockquote>
-															A Gold membersip lets you get a 1+1 on food or 2+2 on drinks across thousands of restaurants in various countries across the world.
+															A Gold membership lets you get a 1+1 on food or 2+2 on drinks across thousands of restaurants in various countries across the world.
 														</blockquote>
 														<p>
 															I worked as one of the founding members of Zomato Gold. It was an instant success in India. It continues to be one of the favourite membership programs of foodies around the world!
