--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 													<div class="blog-detail">Website</div>
 													<div class="blog-content">
 														<blockquote>
-															Art of Where's new bussiness. Users can create new creative patterns using an easy to use tool. Those patterns can be printed on fabrics. Launching soon.
+															Art of Where's new business. Users can create new creative patterns using an easy to use tool. Those patterns can be printed on fabrics. Launching soon.
 														</blockquote>
 														<p>
 															My contrubution was building user's account section of the website. This project was made in React + Redux + ImmutableJS + Typescript. 
