--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 															Art of Where's new business. Users can create new creative patterns using an easy to use tool. Those patterns can be printed on fabrics. Launching soon.
 														</blockquote>
 														<p>
-															My contrubution was building user's account section of the website. This project was made in React + Redux + ImmutableJS + Typescript. 
+															My contribution was building user's account section of the website. This project was made in React + Redux + ImmutableJS + Typescript. 
 														</p>
 													</div>
 												</div>
