--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 										<div class="name">Masters in Computer Science</div>
 										<div class="company">Montreal, Canada</div>
 										<p>
-											Bachelor's Degree in Computer Science ABC Technical Institute, Jefferson, Missouri
+											Currently doing Master's from Concordia University, Montreal
 										</p>
 									</div>
 									<div class="resume-item border-line-h">
@@ -321,7 +321,7 @@
 										<div class="name">Bachelor of Technology</div>
 										<div class="company">PTU, India</div>
 										<p>
-											Coursework - Git, WordPress, Javascript, iOS, Android.
+											Bachelor's Degree in Computer Science PTU, India
 										</p>
 									</div>
 								</div>
