--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">About Me</h2>
                             <span class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
                                 Hello, I’m Ashish, a software engineer based in Montreal. <br> 
-                                I love building new things from scratch and that is what I have been doing professionally for over 4 years. I am a tinkerer (DIY crafts, remote cars, LEGO) and that has always made me believe that I can build anything I desire. I am very passionate about writing code and bringing life-changing products to life. I am an outdoor person and I enjoy riding a bike or skiing downhill during winter. <br><br><b>Also, I am good at</b>
+                                I love building new things from scratch and that is what I have been doing professionally for over 5 years. I am a tinkerer (DIY crafts, remote cars, LEGO) and that has always made me believe that I can build anything I desire. I am very passionate about writing code and bringing life-changing products to life. I am an outdoor person and I enjoy riding a bike or skiing downhill during winter. <br><br><b>Also, I am good at</b>
                             </span>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
@@ -171,7 +171,7 @@
                                     <li><span>Linux/Ubuntu</span></li>
                                 </ul>
                             </div>
-                            <a href="./KANWAR_RESUME.pdf" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                            <a href="./KANWAR_RESUME.pdf" target="_blank" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
                         </div>
                     </div>
                 </div>
@@ -187,8 +187,8 @@
                             <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">October 2018 - current</h6>
                         </a>
                         <p>"Art of Where is an on-demand manufacturer of clothing and printed products specializing in drop shipping for art-based businesses"</p>
-                        <h5 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">We're a small team of 4 developers. We build and maintain software which manages everything from the online shop where you can go and design your own custom products to the production line where we manufacture and ship products.</h5>
-                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">I recently helped build a new product, <a href="https://artfabrics.com/" target="_blank">Art Fabrics</a>, where you can design and order fabrics online. You can check it out <a href="https://artfabrics.com/" target="_blank">here</a>.</h5>
+                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">We're a small team of 4 developers. We build and maintain software that manages everything from the online shop where you can go and design your own custom products to the production line where we manufacture and ship products.</h6>
+                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">I recently helped build a new product, <a href="https://artfabrics.com/" target="_blank">Art Fabrics</a>, where you can design and order fabrics online. You can check it out <a href="https://artfabrics.com/" target="_blank">here</a>.</h6>
                         <span>Technologies used</span>
                         <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                             <ul>
@@ -210,8 +210,8 @@
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Classo</h2>
                             <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Feburary 2020 - current</h6>
                         </a>
-                        <p>"Given this situation (COVID 19) we want to create an online platform which enables individual instructors to apply their trade online. Classo helps individual instructors take their lessons online using a Zoom integration and also manages payments for them."</p>
-                        <h5 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">I am working on this project along with the most hard working people I've met in my profession to date. This product is still in early stages where we're trying to get early feedback from users by making quick iterations.</h5>
+                        <p>"Given this situation (COVID 19) we want to create an online platform that enables individual instructors to apply their trade online. Classo helps individual instructors take their lessons online using a Zoom integration and also manages payments for them."</p>
+                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">I am working on this project along with the most hard-working people I've met in my profession to date. This product is still in early stages where we're trying to get early feedback from users by making quick iterations.</h6>
                         <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">An MVP of the product can be found <a href="https://classo.live/" target="_blank">here</a>.</h5>
                         <span>Technologies used</span>
                         <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
@@ -235,8 +235,8 @@
                             <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">October 2015 - August 2018</h6>
                         </a>
                         <p>"Zomato is an Indian restaurant aggregator and food delivery start-up. Zomato provides information, menus, and user-reviews of restaurants, and also has food delivery options from partner restaurants."</p>
-                        <h5 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">During my stint at Zomato, I worked on various projects. My favorite one being <b>Zomato Gold</b>. I was one of the founding team members of Gold and it was an instant success after the launch.</h5>
-                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Besides Gold, the projects I worked on include making Google AMP for Zomato mobile web, building Progressive Web App (react) for mobile web, shipping features live for web and mobile apps.</h5>
+                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">During my stint at Zomato, I worked on various projects. My favorite one being <b>Zomato Gold</b>. I was one of the founding team members of Gold and it was an instant success after the launch.</h6>
+                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Besides Gold, the projects I worked on include making Google AMP for Zomato mobile web, building Progressive Web App (react) for mobile web, shipping features live for web and mobile apps.</h6>
                         <span>Technologies used</span>
                         <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                             <ul>
