--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                         <!-- Education Institutes-->
                                         <div class="col-sm-6">
                                             <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                                <h4>Masters in Software Engineering From</h4>
+                                                <h4>Masters in Software Engineering</h4>
                                                 <h6><a href="#">Concordia University, Canada</a></h6>
                                                 <div class="mh-eduyear">2018-2020</div>
                                             </div>
@@ -286,7 +286,7 @@
                                         <!-- Education Institutes-->
                                         <div class="col-sm-6">
                                             <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                                <h4>Bachelor of Technology From</h4>
+                                                <h4>Bachelor of Technology</h4>
                                                 <h6><a href="#">Punjab Technical University, India</a></h6>
                                                 <div class="mh-eduyear">2011-2015</div>
                                             </div>
