--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="row section-separator-small">
                     <div class="col-sm-7">
                         <img src="assets/images/aow-logo.svg" alt=""  class="img-fluid company-logo">
-                        <a href="https://artfabrics.com/" target="_blank">
+                        <a href="https://artofwhere.com/" target="_blank">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Art of Where</h2>
                             <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">October 2018 - current</h6>
                         </a>
