--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <div class="hero-info">
                                 <div class="hero-img wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                     <div class="img-border">
-                                        <img src="assets/images/hero.jpg" alt=""  class="img-fluid">
+                                        <img class="lazy" data-src="assets/images/hero.jpg" alt=""  class="img-fluid">
                                     </div>
                                 </div>
                                 <div id="my-botui-app">
@@ -145,7 +145,7 @@
                 <div class="row section-separator">
                     <div class="col-sm-12 col-md-6">
                         <div class="mh-about-img shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
-                            <img src="assets/images/programmer.gif" alt="" class="img-fluid">
+                            <img class="lazy" data-src="assets/images/programmer.gif" alt="">
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6">
@@ -181,7 +181,7 @@
             <div class="container">
                 <div class="row section-separator-small">
                     <div class="col-sm-7">
-                        <img src="assets/images/aow-logo.svg" alt=""  class="img-fluid company-logo">
+                        <img class="lazy img-fluid company-logo" data-src="assets/images/aow-logo.svg" alt="" >
                         <a href="https://artofwhere.com/" target="_blank">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Art of Where</h2>
                             <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">October 2018 - current</h6>
@@ -200,12 +200,12 @@
                         </div>
                     </div>
                     <div class="col-sm-5">
-                        <img src="assets/images/af-lab.gif" alt=""  class="img-fluid">
+                        <img class="lazy" data-src="assets/images/af-lab.gif" alt="" >
                     </div>
                 </div>
                 <div class="row section-separator-small">
                     <div class="col-sm-7">
-                        <img src="assets/images/Classo.live.png" alt=""  class="img-fluid company-logo">
+                        <img class="lazy img-fluid company-logo" data-src="assets/images/Classo.live.png" alt="" >
                         <a href="https://classo.live/" target="_blank">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Classo</h2>
                             <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">April 2020 - current</h6>
@@ -224,12 +224,12 @@
                         </div>
                     </div>
                     <div class="col-sm-5">
-                        <img src="assets/images/classo-banner.png" alt=""  class="img-fluid">
+                        <img class="lazy" data-src="assets/images/classo-banner.png" alt="" >
                     </div>
                 </div>
                 <div class="row section-separator-small">
                     <div class="col-sm-7">
-                        <img src="assets/images/zomato-logo.webp" alt=""  class="img-fluid company-logo">
+                        <img class="lazy img-fluid company-logo" data-src="assets/images/zomato-logo.webp" alt="" >
                         <a href="https://zomato.com/" target="_blank">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Zomato</h2>
                             <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">October 2015 - August 2018</h6>
@@ -250,8 +250,8 @@
                     </div>
                     <div class="col-sm-5">
                         <div class="banner" data-height="400" data-width="100%" data-slide-speed="900" data-autoslide="5000">
-                            <img src="assets/images/z_gold.jpg" class="slider">
-                            <img src="assets/images/zomato-web.png" class="slider">
+                            <img class="lazy slider" data-src="assets/images/z_gold.jpg" >
+                            <img class="lazy slider" data-src="assets/images/zomato-web.png" >
 
                             <div class="previous" data-previous-cursor="assets/images/left.png"></div>
                             <div class="next" data-next-cursor="assets/images/right.png"></div>
@@ -323,5 +323,8 @@
         <script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
         <script src="./js/botui.js"></script>
         <script src="./js/slider.js"></script>
+        <script src="./js/main.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
     </body>
 </html>
