--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                                     <ul>
                                         <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i class="fa fa-envelope"></i><a href="mailto:">ashishthakur913@gmail.com</a></li>
                                         <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><i class="fa fa-phone"></i><a href="callto:">+1 514 546 3111</a></li>
-                                        <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                        <li class="wow fadeInUp hidden-div" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                             <i class="fa fa-map-marker"></i>
                                             <address>Montreal, Canada</address>
                                         </li>
                                     </ul>
-                                    <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
+                                    <ul class="social-icon wow fadeInUp hidden-div" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                         <li><a href="https://www.facebook.com/ashishthakur913"><i class="fa fa-facebook"></i></a></li>
                                         <li><a href="https://github.com/ashishthakur913"><i class="fa fa-github"></i></a></li>
                                     </ul>
