--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
                 <div class="row section-separator-small">
                     <div class="col-sm-7">
                         <img class="lazy img-fluid company-logo" data-src="assets/images/Classo.live.png" alt="" >
-                        <a href="https://classo.live/" target="_blank">
+                        <a href="https://classo.live/demo" target="_blank">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">Classo</h2>
                             <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">April 2020 - current</h6>
                         </a>
                         <p>"Given this situation (COVID 19) we want to create an online platform that enables individual instructors to apply their trade online. Classo helps individual instructors take their lessons online using video calling integrations (like agora) and also manages payments for them."</p>
                         <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">I am working on this project along with the most hard-working people I've met in my profession to date. This product is still in early stages where we're trying to get early feedback from users by making quick iterations.</h6>
-                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">An MVP of the product can be found <a href="https://classo.live/" target="_blank">here</a>.</h5>
+                        <h6 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">An MVP of the product can be found <a href="https://classo.live/demo" target="_blank">here</a>.</h5>
                         <span>Technologies used</span>
                         <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                             <ul>
